# turbofan-vpf-analysis

./: .gitignore  README.md  pyproject.toml
outputs/: results_by_phase.csv
scripts/: example.py  vpf_vs_fpf_2d.py
src/turbofan_vpf/: __init__.py
src/turbofan_vpf/aero/: __init__.py  calculations.py  compressibility.py  incidence_control.py  metrics.py  optima.py  polars.py
src/turbofan_vpf/domain/: __init__.py  config.py  flight_phases.py  isa.py  models.py
src/turbofan_vpf/utils/: __init__.py  io.py  paths.py
src/turbofan_vpf/viz/: __init__.py  constants.py  plots.py  plotting.py
tests/: __init__.py  test_aero.py  test_incidence_control.py  test_isa.py  test_metrics.py  test_polars.py
